# rootcause-brain-skills

./: .gitignore  AGENTS.md  README.md  RELEASING.md  RUNTIME_DIGEST  SPEC.md  check-release-coherence.sh  install.sh  plugin.json  refresh-brains.sh
commands/: rc-run.md  (+6 more)
runtime/: pyproject.toml
runtime/lib/: __init__.py  _http_audit.py  _output.py  api.py  brain_lint.py  cloudwatch.py  db.py  fs.py  html.py  http.py  integration_smoke.py  livecheck.py  mcp.py  oauth.py  sender_history.py  settings.py  stripe.py  telemetry.py
runtime/lib/action/: __init__.py  airtable.py  googledrive.py  helpers.yaml  mollie.py  notion.py
runtime/lib/connectors/: __init__.py
runtime/lib/run_dump/: __init__.py  _render.py
runtime/tests/: test_action.py  test_action_helper_metadata.py  test_action_providers.py  test_airtable_connector.py  test_api.py  test_appsignal_connector.py  test_asana_connector.py  test_basecamp_connector.py  test_betterstack_connector.py  test_billit_connector.py  test_box_connector.py  test_brain_lint.py  test_bubble_connector.py  test_bugsnag_connector.py  test_calendly_connector.py  test_chargebee_connector.py  test_clickup_connector.py  test_close_connector.py  test_cloudflare_connector.py  test_confluence_connector.py  test_customerio_connector.py  test_datadog_connector.py  test_db.py  test_dropbox_connector.py  test_exactonline_connector.py  test_fireflies_connector.py  test_freshdesk_connector.py  test_front_connector.py  test_github_connector.py  test_gitlab_connector.py  test_gmail_connector.py  test_gocardless_connector.py  test_googlecalendar_connector.py  test_googledocs_connector.py  test_googledrive_connector.py  test_googlesheets_connector.py  test_grafana_connector.py  test_helpscout_connector.py  test_honeybadger_connector.py  test_http_audit.py  (+54 more)
runtime/tests/cassettes/: stripe_customer_by_email.yaml  (+1 more)
(+266 files in other folders)
